Adjust the styles of +/- buttons container to make sure it aligns with the slider

--- a/src/renderer/components/+workloads-deployments/deployment-scale-dialog.scss
+++ b/src/renderer/components/+workloads-deployments/deployment-scale-dialog.scss
@@ -20,11 +20,17 @@
     }
 
     .desired-scale {
-      flex: 1 0;
+      flex: 1.1 0;
     }
 
     .slider-container {
-      flex: 1.3 0;
+      flex: 1 0;
+    }
+
+    .plus-minus-container {
+      margin-left: 15px;
+      // for vertical align with .slider-container
+      margin-top: -4px;
     }
 
     .warning {
